# backend

./: .flake8  .gitignore  Dockerfile  install-poetry.py  pyproject.toml
.github/workflows/: docker-image.yml
scripts/: command.sh
src/: main.py
src/app/: app.py  logging.py
src/gql/: app.py  schema.py
src/tests/: test_calc.py  test_healthcheck.py
